[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/BaseButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/dogicapixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://menus/SettingsMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/ui_select.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "slide_in_confirmation"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("FadedBackground:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ConfirmationPopUp:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 185 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ConfirmationPopUp:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ConfirmationPopUp:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 68.0
margin_top = 8.0
margin_right = 252.0
margin_bottom = 172.0
size_flags_horizontal = 4
custom_constants/separation = 20

[node name="SettingsMenuTitle" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 184.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1

[node name="OptionsWrap" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 184.0
margin_bottom = 114.0
size_flags_horizontal = 4
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraShakeOptionWrap" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OptionsWrap"]
margin_right = 154.0
margin_bottom = 24.0
size_flags_horizontal = 0
alignment = 1

[node name="CameraShakeCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/OptionsWrap/CameraShakeOptionWrap"]
margin_right = 24.0
margin_bottom = 24.0
pressed = true

[node name="CameraShakeLabel" type="Label" parent="MarginContainer/VBoxContainer/OptionsWrap/CameraShakeOptionWrap"]
margin_left = 28.0
margin_top = 9.0
margin_right = 154.0
margin_bottom = 15.0
text = "Enable Camera Shake"

[node name="DevConsoleOptionWrap" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OptionsWrap"]
margin_top = 32.0
margin_right = 184.0
margin_bottom = 56.0
size_flags_horizontal = 0
alignment = 1

[node name="DevConsoleCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/OptionsWrap/DevConsoleOptionWrap"]
margin_right = 24.0
margin_bottom = 24.0

[node name="DevConsoleLabel" type="Label" parent="MarginContainer/VBoxContainer/OptionsWrap/DevConsoleOptionWrap"]
margin_left = 28.0
margin_top = 9.0
margin_right = 184.0
margin_bottom = 15.0
text = "Enable Developer Console"

[node name="ClearSaveButton" parent="MarginContainer/VBoxContainer/OptionsWrap" instance=ExtResource( 2 )]
margin_top = 64.0
margin_right = 184.0
margin_bottom = 82.0
text = "Clear Save Data"

[node name="PreviousMenuButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 134.0
margin_right = 184.0
margin_bottom = 152.0
text = "Main Menu"

[node name="FadedBackground" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.52588e-05
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationPopUp" type="Control" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 185.0
margin_bottom = 185.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ConfirmationPopUp"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 20
custom_constants/margin_left = 10
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="ConfirmationPopUp/MarginContainer"]
margin_left = 10.0
margin_top = 20.0
margin_right = 310.0
margin_bottom = 160.0

[node name="Panel" type="Panel" parent="ConfirmationPopUp/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 132.0

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationPopUp/MarginContainer/PanelContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationLabel" type="Label" parent="ConfirmationPopUp/MarginContainer/PanelContainer/Panel/VBoxContainer"]
margin_top = 25.0
margin_right = 286.0
margin_bottom = 58.0
text = "Are you sure you want 
to delete your save data? 

THIS CANNOT BE UNDONE!"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmationPopUp/MarginContainer/PanelContainer/Panel/VBoxContainer"]
margin_top = 82.0
margin_right = 286.0
margin_bottom = 100.0
custom_constants/separation = 24
alignment = 1

[node name="CancelButton" parent="ConfirmationPopUp/MarginContainer/PanelContainer/Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 11.0
margin_right = 131.0
margin_bottom = 18.0
text = "No"

[node name="ConfirmButton" parent="ConfirmationPopUp/MarginContainer/PanelContainer/Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 155.0
margin_right = 275.0
margin_bottom = 18.0
text = "Yes"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide_in_confirmation = SubResource( 2 )

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/OptionsWrap/CameraShakeOptionWrap/CameraShakeCheckBox" to="." method="_on_CameraShakeCheckBox_mouse_entered"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/OptionsWrap/CameraShakeOptionWrap/CameraShakeCheckBox" to="." method="_on_CameraShakeCheckBox_toggled"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/OptionsWrap/DevConsoleOptionWrap/DevConsoleCheckBox" to="." method="_on_DevConsoleCheckBox_mouse_entered"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/OptionsWrap/DevConsoleOptionWrap/DevConsoleCheckBox" to="." method="_on_DevConsoleCheckBox_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsWrap/ClearSaveButton" to="." method="_on_ClearSaveButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PreviousMenuButton" to="." method="_on_PreviousMenuButton_pressed"]
[connection signal="pressed" from="ConfirmationPopUp/MarginContainer/PanelContainer/Panel/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="ConfirmationPopUp/MarginContainer/PanelContainer/Panel/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
